--- a/style.css
+++ b/style.css
@@ -1,118 +1,3 @@
-/*
-html {
-	margin: 0px;
-	padding:0px;
-}
-body {
-	background-image:url('./img/hg.jpg');
-	margin: 0px;
-	padding:0px;
-	padding-top:160px;
-}
-table{
-	background: linear-gradient(to bottom, rgba(44,206,224,0) 0%,rgba(44,206,224,0.5) 8%,rgba(44,206,224,0.54) 11%,rgba(36,146,183,0.8) 29%,rgba(33,119,165,0.8) 37%,rgba(33,119,165,0.8) 71%,rgba(33,119,165,0.67) 79%,rgba(81,154,200,0.5) 90%,rgba(121,182,229,0) 99%,rgba(125,185,232,0) 100%); 
-	margin: 0px auto;
-	font-weight: bold;
-	color:white;
-	text-shadow: #68F1FF 0 0 3px;
-	width:100%;
-}
-thead th {
-	border-bottom: 1px #ffffff solid;
-}
-tr:nth-child(even) {
-	background-color: rgba(215, 255, 248, 0.2);
-}
-div {
-	
-	width:30%;
-	float:left;
-	padding:1em;
-}
-.title{
-	font-size:3em;
-	font-weight: bold;
-	color:white;
-	text-shadow: #68F1FF 0 0 3px;
-}
-svg{
-	opacity: 0.8;
-}
-
-table tr td:first-child{
-	text-align:right;
-}
-
-table img{
-	padding-right:2em;
-}
-
-.mainMenu{
-	list-style: none;
-	position:absolute;
-	right:0px;
-	top:0px;
-	margin: 0px;
-	padding:0px;
-	width:100%;
-	display:blocK;
-	background: linear-gradient(to bottom, rgba(44,206,224,0) 0%,rgba(44,206,224,0.5) 8%,rgba(44,206,224,0.54) 11%,rgba(36,146,183,0.8) 29%,rgba(33,119,165,0.8) 37%,rgba(33,119,165,0.8) 71%,rgba(33,119,165,0.67) 79%,rgba(81,154,200,0.5) 90%,rgba(121,182,229,0) 99%,rgba(125,185,232,0) 100%);
-z-inde:-1;
-}
-.mainMenu li{
-	font-weight: bold;
-	font-size: 1.5em;
-	display: block;
-	float:right;
-
-}
-.mainMenu li a{
-	color:white;
-	text-shadow: #68F1FF 0 0 3px;
-	display: block;
-	text-decoration: none;
-	padding:1em;
-border-left: 1px solid rgba(44,206,224,0.2);
-}
-.mainMenu li a:hover{
-	color:white;
-	text-shadow: #ffffff 0 0 3px;
-	background: linear-gradient(to bottom, rgba(44,206,224,0) 0%,rgba(44,206,224,0.5) 8%,rgba(44,206,224,0.54) 11%,rgba(36,146,183,0.8) 29%,rgba(33,119,165,0.8) 37%,rgba(33,119,165,0.8) 71%,rgba(33,119,165,0.67) 79%,rgba(81,154,200,0.5) 90%,rgba(121,182,229,0) 99%,rgba(125,185,232,0) 100%);
-}
-
-.logo{
-	position:absolute;
-	left:0px;
-	top:0px;
-}
-
-.userProfile{
-	background-color:rgba(255, 255, 255, 0.6);
-	border-radius:1em;
-	margin:1em;
-	width: -moz-min-content;
-
-}
-.userProfile .username{
-	font-size:2em;
-	font-weight:bold;
-	text-align:right;
-}
-.userProfile .flag{
-
-
-}
-.userProfile .userimage{
-
-}
-
-h1{
-	color:white;
-	text-shadow: #68F1FF 0 0 3px;
-	background: linear-gradient(to bottom, rgba(44,206,224,0) 0%,rgba(44,206,224,0.5) 8%,rgba(44,206,224,0.54) 11%,rgba(36,146,183,0.8) 29%,rgba(33,119,165,0.8) 37%,rgba(33,119,165,0.8) 71%,rgba(33,119,165,0.67) 79%,rgba(81,154,200,0.5) 90%,rgba(121,182,229,0) 99%,rgba(125,185,232,0) 100%);
-padding:1em;
-}
-*/
 html {
 	margin: 0px;
 	padding:0px;
@@ -186,7 +71,12 @@ body {
 
 .verticalMenu a:hover{
 	color: black;
-	background-color: rgba(128, 128, 128, 0.13);
+	background-color: #e1e1e1;
+
+}
+.verticalMenu .selected, .verticalMenu .selected:hover{
+	color: white;
+	background-color: grey;
 
 }
 
