--- a/style.css
+++ b/style.css
@@ -210,7 +210,8 @@ h1{
 	padding:0.3em;
 	background-color:white;
 	box-shadow:0 0 15px 5px #DADADA;
-	transform: rotate(-7deg);
+	/*transform: rotate(-7deg);*/
+	/*margin: 4em;*/
 }
 sup{
 font-size:0.4em;
